# futurerestore

./: .gitignore  .gitmodules  CMakeLists.txt  COMPILING.md  README.md  build.sh  fix_dep_root.sh
.github/workflows/: ci.yml  linux-bootstrap.sh  linux-build.sh  mac-build.sh  mac-post.sh  win-bootstrap.sh  win-build.sh
futurerestore/: futurerestore.cpp  futurerestore.hpp  main.cpp
src/: CMakeLists.txt  futurerestore.cpp  futurerestore.hpp  main.cpp
